--- a/aplikasi_pilem/pubspec.yaml
+++ b/aplikasi_pilem/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
   flutter:
     sdk: flutter
 
@@ -35,7 +36,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  http: any
+  http: ^0.13.6
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
